kubernetes/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onak-elasticsearch
spec:
  selector:
    matchLabels:
      app: onak-elasticsearch
  template:
    metadata:
      labels:
        app: onak-elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: divante/vue-storefront-elasticsearch:5.6.9
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: onak-elasticsearch-data
