kubernetes/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onak-kibana
spec:
  selector:
    matchLabels:
      app: onak-kibana
  template:
    metadata:
      labels:
        app: onak-kibana
    spec:
      containers:
      - name: onak-kibana
        image: divante/vue-storefront-kibana:5.6.9
        ports:
        - containerPort: 5601
