kubernetes/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onak-elasticsearch
  labels:
    app: onak-elasticsearch
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: onak-elasticsearch
