kubernetes/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onak-kibana
  labels:
    app: onak-kibana
spec:
  selector:
    app: onak-kibana
  ports:
  - port: 5601
    targetPort: 5601
