kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onak-redis
  labels:
    app: onak-redis
spec:
  selector:
    app: onak-redis
  ports:
  - port: 6379
    targetPort: 6379
